<resources>
    <string name="app_name">MenuActivity</string>
    <string name="menu_activity">Menu Activity</string>
    <string name="using_action_bar">Using Action Bar</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="go_to_first_fragment">Go to First Fragment</string>
    <string name="menu">Menu</string>
    <string name="exit">Exit</string>
    <string name="go_to_dialog_fragment">Go to Dialog Fragment</string>
    <string name="press_to_exit_app">Press to Exit App</string>
    <string name="welcome_to_the_first_fragment"> In the End by Linkin Park </string>
    <string name="lyrics">I tried so hard and got so far\nBut in the end, it doesn\'t even matter\nI had to fall to lose it all\nBut in the end, it doesn\'t even matter\n\nOne thing, I don\'t know why\nIt doesn\'t even matter how hard you try\nKeep that in mind, I designed this rhyme\nTo remind myself of a time when I tried so hard\n\nIn spite of the way you were mockin\' me\nActin\' like I was part of your property\nRemembering all the times you fought with me\nI\'m surprised it got so far\n\nThings aren\'t the way they were before\nYou wouldn\'t even recognize me anymore\nNot that you knew me back then\nBut it all comes back to me in the end\n\nYou kept everything inside\nAnd even though I tried, it all fell apart\nWhat it meant to me will eventually\nBe a memory of a time when I\n\nI tried so hard and got so far\nBut in the end, it doesn\'t even matter\nI had to fall to lose it all\nBut in the end, it doesn\'t even matter</string>
    <string name="welcome_to_the_dialog_fragment">Welcome to the Dialog Fragment</string>
    <string name="poem">When life is heavy and hard to take,\n
                        go off by yourself. Enter the silence.\n
                        Bow in prayer. Don’t ask questions:\n
                        Wait for hope to appear.\n
                        Don’t run from trouble. Take it full-face.\n
                        The “worst” is never the worst.</string>
</resources>