<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/fragment_container"
    tools:context=".FirstFragment">

    <!-- TODO: Update blank fragment layout -->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="@string/hello_blank_fragment"
        android:visibility="gone"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <TextView
            android:id="@+id/txt1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:fontFamily="sans-serif"
            android:text="@string/welcome_to_the_first_fragment"
            android:textColor="@color/black"
            android:textSize="25sp"
            android:layout_marginTop="5dp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/lyrics"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/lyrics"
            android:layout_below="@id/txt1"
            android:textColor="@color/black"
            android:fontFamily="sans-serif"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:layout_centerHorizontal="true" />


        <ImageView
            android:id="@+id/image"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="10dp"
            android:layout_centerHorizontal="true"
            android:layout_below="@id/lyrics"
            android:src="@drawable/for_second"/>
    </RelativeLayout>


</FrameLayout>