<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:id="@+id/fragment_container"
    android:layout_height="match_parent"
    tools:context=".DialogFragment">

    <!-- TODO: Update blank fragment layout -->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="@string/hello_blank_fragment"
        android:visibility="gone"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/image"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="20dp"
            android:src="@drawable/for_first" />

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/image"
            android:layout_marginTop="10dp"
            android:layout_centerHorizontal="true"
            android:text="@string/welcome_to_the_dialog_fragment"
            android:textColor="@color/black"
            android:fontFamily="sans-serif"
            android:gravity="center"
            android:textStyle="bold"
            android:textSize="22sp"/>

        <TextView
            android:id="@+id/message"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/title"
            android:layout_marginTop="10dp"
            android:layout_centerHorizontal="true"
            android:text="@string/poem"
            android:gravity="center"
            android:textColor="@color/black"
            android:fontFamily="sans-serif" />

        <ImageButton
            android:id="@+id/positiveBtn"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="50dp"
            android:layout_marginBottom="50dp"
            android:layout_marginTop="50dp"
            android:background="@drawable/positive_button" />

        <ImageButton
            android:id="@+id/negativeBtn"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_marginBottom="50dp"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="50dp"
            android:layout_alignParentBottom="true"
            android:background="@drawable/negative_button" />



    </RelativeLayout>

</FrameLayout>